--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,13 @@ Django==2.2.5
 django-allauth==0.40.0
 django-rest-auth==0.9.5
 djangorestframework==3.10.3
+Faker==2.0.2
 gunicorn==19.9.0
 idna==2.8
 oauthlib==3.1.0
 Pillow==6.1.0
 psycopg2==2.8.3
+python-dateutil==2.8.0
 python-decouple==3.1
 python3-openid==3.1.0
 pytz==2019.2
@@ -18,5 +20,6 @@ requests==2.22.0
 requests-oauthlib==1.2.0
 six==1.12.0
 sqlparse==0.3.0
+text-unidecode==1.3
 urllib3==1.25.5
 whitenoise==4.1.3
