--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ defusedxml==0.6.0
 dj-database-url==0.5.0
 Django==2.2.5
 django-allauth==0.40.0
+django-cors-headers==3.1.1
 django-rest-auth==0.9.5
+django-seed==0.1.9
 djangorestframework==3.10.3
 Faker==2.0.2
 gunicorn==19.9.0
